Fix safe button not functional on safari

--- a/src/Hyperlink.css
+++ b/src/Hyperlink.css
@@ -57,3 +57,8 @@
     border-radius: 5px;
     cursor: pointer;
 }
+
+.ce-inline-tool-hyperlink--button:hover {
+    color: #fff;
+    text-decoration: none;
+}
